[package]
name = "fyrox-material"
version = "1.0.0-rc.1"
edition = "2021"
description = "Material and shader utilities for Fyrox Engine"
keywords = ["graphics"]
categories = ["game-development"]
include = ["/src/**/*", "/Cargo.toml", "/LICENSE", "/README.md"]
homepage = "https://fyrox.rs"
documentation = "https://docs.rs/fyrox-material"
repository = "https://github.com/FyroxEngine/Fyrox"
rust-version = "1.86"

[dependencies]
fyrox-core = { version = "1.0.0-rc.1", path = "../fyrox-core" }
fyrox-resource = { version = "1.0.0-rc.1", path = "../fyrox-resource" }
fyrox-texture = { version = "1.0.0-rc.1", path = "../fyrox-texture" }
fyrox-graphics = { version = "1.0.0-rc.1", path = "../fyrox-graphics" }
strum = "0.26.1"
strum_macros = "0.26.1"
fxhash = "0.2.1"
lazy_static = "1.4.0"
uuid = "1"
serde = { version = "1", features = ["derive"] }
ron = "0.8.0"
regex = "1"

[dev-dependencies]
fyrox-texture = { version = "1.0.0-rc.1", path = "../fyrox-texture" }