[package]
name = "fyrox-material"
version = "1.0.0-rc.2"
authors = ["Dmitry Stepanov <d1maxa@yandex.ru>"]
edition = "2021"
license = "MIT"
description = "Material and shader utilities for Fyrox Engine"
keywords = ["graphics"]
categories = ["game-development"]
include = ["/src/**/*", "/Cargo.toml", "/LICENSE", "/README.md"]
homepage = "https://fyrox.rs"
documentation = "https://docs.rs/fyrox-material"
repository = "https://github.com/FyroxEngine/Fyrox"
rust-version = "1.87"

[dependencies]
fyrox-core = { version = "1.0.0-rc.1", path = "../fyrox-core" }
fyrox-resource = { version = "1.0.0-rc.1", path = "../fyrox-resource" }
fyrox-texture = { version = "1.0.0-rc.1", path = "../fyrox-texture" }
fyrox-graphics = { version = "1.0.0-rc.1", path = "../fyrox-graphics" }
strum = "0.27"
strum_macros = "0.27"
fxhash = "0.2.1"
uuid = "1"
serde = { version = "1", features = ["derive"] }
ron = "0.11.0"
regex = "1"

[dev-dependencies]
fyrox-texture = { version = "1.0.0-rc.1", path = "../fyrox-texture" }
