[package]
name = "fyrox-math"
version = "0.1.0"
authors = ["Dmitry Stepanov <d1maxa@yandex.ru>"]
edition = "2021"
license = "MIT"
description = "Math utils for the Fyrox engine"
keywords = ["octree", "plane", "ray", "aabb", "frustum"]
categories = ["game-development"]
include = ["/src/**/*", "/Cargo.toml", "/LICENSE"]
homepage = "https://fyrox.rs"
documentation = "https://docs.rs/fyrox-math"
repository = "https://github.com/FyroxEngine/Fyrox"
resolver = "2"
rust-version = "1.72"

[dependencies]
rectutils = "0.1.0"
nalgebra = "0.32.3"
arrayvec = "0.7.4"
num-traits = "0.2.18"
uuid = "1.7.0"