[package]
name = "fyrox-math"
version = "0.36.2"
authors = ["Dmitry Stepanov <d1maxa@yandex.ru>"]
edition = "2021"
license = "MIT"
description = "Math utils for the Fyrox engine"
keywords = ["octree", "plane", "ray", "aabb", "frustum"]
categories = ["game-development"]
include = ["/src/**/*", "/Cargo.toml", "/LICENSE"]
homepage = "https://fyrox.rs"
documentation = "https://docs.rs/fyrox-math"
repository = "https://github.com/FyroxEngine/Fyrox"
rust-version = "1.80"

[dependencies]
fyrox-reflect = { path = "../fyrox-reflect" }

rectutils = { workspace = true }
uuid = { workspace = true , features = ["v4"] }
nalgebra = { version = "0.33", features = ["bytemuck"] }
arrayvec = "0.7.4"
num-traits = "0.2.18"
bytemuck = { version = "1.16.1", features = ["derive"] }
