[package]
name = "fyrox-math"
version = "0.36.2"
authors = ["Dmitry Stepanov <d1maxa@yandex.ru>"]
edition = "2021"
license = "MIT"
description = "Math utils for the Fyrox engine"
keywords = ["octree", "plane", "ray", "aabb", "frustum"]
categories = ["game-development"]
include = ["/src/**/*", "/Cargo.toml", "/LICENSE"]
homepage = "https://fyrox.rs"
documentation = "https://docs.rs/fyrox-math"
repository = "https://github.com/FyroxEngine/Fyrox"
rust-version = "1.86"

[dependencies]
rectutils = "0.3.0"
nalgebra = { version = "0.33", features = ["bytemuck"] }
arrayvec = "0.7.4"
num-traits = "0.2.18"
uuid = { version = "1", features = ["v4"] }
bytemuck = { version = "1.16.1", features = ["derive"] }
