[package]
name = "fyrox-resource"
version = "0.7.0"
authors = ["Dmitry Stepanov <d1maxa@yandex.ru>"]
edition = "2021"
license = "MIT"
description = "Asset management crate for the Fyrox engine"
keywords = ["asset", "resource"]
categories = ["game-development"]
include = ["/src/**/*", "/Cargo.toml", "/LICENSE"]
homepage = "https://fyrox.rs"
documentation = "https://docs.rs/fyrox-resource"
repository = "https://github.com/FyroxEngine/Fyrox"
resolver = "2"
rust-version = "1.56"

[dependencies]
fyrox-core = { path = "../fyrox-core", version = "0.23.0" }
fxhash = "0.2.1"
