[package]
name = "fyrox-scripts"
version = "0.36.0"
authors = ["Dmitry Stepanov <d1maxa@yandex.ru>"]
edition = "2021"
license = "MIT"
description = "Standard scripts for the Fyrox engine"
keywords = ["asset", "resource"]
categories = ["game-development"]
include = ["/src/**/*", "/Cargo.toml", "/LICENSE"]
homepage = "https://fyrox.rs"
documentation = "https://docs.rs/fyrox-scripts"
repository = "https://github.com/FyroxEngine/Fyrox"
rust-version = "1.80"

[dependencies]
fyrox = { version = "0.36.0", path = "../fyrox" }