[package]
name = "fyrox-sound"
version = "2.0.0-rc.1"
authors = ["Dmitry Stepanov <d1maxa@yandex.ru>"]
edition = "2021"
license = "MIT"
description = "Sound library for games."
keywords = ["sound", "game", "hrtf", "binaural", "reverb"]
categories = ["game-development", "multimedia::audio"]
include = ["/src/**/*", "/Cargo.toml", "/LICENSE", "/README.md", "/examples/*"]
homepage = "https://fyrox.rs"
documentation = "https://docs.rs/fyrox-sound"
repository = "https://github.com/FyroxEngine/Fyrox"
readme = "README.md"
rust-version = "1.87"

[dependencies]
fyrox-core = { path = "../fyrox-core", version = "2.0.0-rc.1" }
fyrox-resource = { path = "../fyrox-resource", version = "2.0.0-rc.1" }
hrtf = "0.8.0"
hound = "3.4.0"
strum = "0.27"
strum_macros = "0.27"
tinyaudio = { version = "2", optional = true }
serde = { version = "1", features = ["derive"] }
symphonia = { version = "0.5.4", features = ["all-codecs"] }

[features]
default = ["output"]
output = ["tinyaudio"]