[package]
name = "fyrox-texture"
version = "1.0.0-rc.2"
edition = "2021"
license = "MIT"
description = "Texture utilities for Fyrox Engine"
keywords = ["graphics"]
categories = ["game-development"]
include = ["/src/**/*", "/Cargo.toml", "/LICENSE", "/README.md"]
homepage = "https://fyrox.rs"
documentation = "https://docs.rs/fyrox-texture"
repository = "https://github.com/FyroxEngine/Fyrox"
rust-version = "1.87"

[dependencies]
fyrox-core = { path = "../fyrox-core", version = "1.0.0-rc.2" }
fyrox-resource = { path = "../fyrox-resource", version = "1.0.0-rc.2" }
ddsfile = "0.5.0"
fast_image_resize = "5.0.0"
serde = { version = "1", features = ["derive"] }
fxhash = "0.2.1"
strum = "0.27"
strum_macros = "0.27"
tbc = "0.3.0"
image = { version = "0.25.1", default-features = false, features = ["gif", "jpeg", "png", "tga", "tiff", "bmp"] }