[package]
name = "fyrox-ui"
version = "0.36.2"
authors = ["Dmitry Stepanov <d1maxa@yandex.ru>"]
edition = "2021"
license = "MIT"
description = "Extendable UI library"
keywords = ["ui", "game", "gui"]
categories = ["game-development", "gui"]
include = ["/src/**/*", "/Cargo.toml", "/LICENSE", "/README.md"]
homepage = "https://fyrox.rs"
documentation = "https://docs.rs/fyrox-ui"
repository = "https://github.com/FyroxEngine/Fyrox"
readme = "README.md"
rust-version = "1.86"

[dependencies]
fyrox-core = { path = "../fyrox-core", version = "0.36.2", features = ["serde"] }
fyrox-resource = { path = "../fyrox-resource", version = "0.36.2" }
fyrox-texture = { path = "../fyrox-texture", version = "0.36.2" }
fyrox-graph = { path = "../fyrox-graph", version = "0.36.2" }
fyrox-animation = { path = "../fyrox-animation", version = "0.36.2" }
lazy_static = "1.4.0"
copypasta = "0.10.1"
fontdue = "0.9.2"
notify = "8"
fxhash = "0.2.1"
strum = "0.26.1"
strum_macros = "0.26.1"
serde = { version = "1", features = ["derive"] }
bytemuck = { version = "1.16.1", features = ["derive"] }
uuid = { version = "1.7.0", features = ["v4"] }

[features]
enable_profiler = ["fyrox-core/enable_profiler"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sysinfo = "0.29.0"
directories = "5.0.1"
