[package]
name = "fyrox-project-manager"
version = "0.36.0"
edition = "2021"

[dependencies]
fyrox = { version = "0.36.0", path = "../fyrox" }
fyrox-template-core = { version = "0.36.0", path = "../template-core" }
fyrox-build-tools = { version = "0.36.0", path = "../fyrox-build-tools" }
serde = { version = "1", features = ["derive"] }
ron = "0.8.1"
open = "5.0.1"
cargo_metadata = "0.19.0"
serde_json = "1.0.133"
directories = "5.0.1"