[package]
name = "fyrox-project-manager"
version = "0.36.2"
edition = "2021"
authors = ["Dmitry Stepanov <d1maxa@yandex.ru>"]
license = "MIT"
description = "Project manager for Fyrox engine"
keywords = ["fyrox", "project", "manager"]
categories = ["game-development"]
include = ["/src/**/*", "/Cargo.toml", "/LICENSE", "/README.md", "/resources/**/*"]
homepage = "https://fyrox.rs"
repository = "https://github.com/FyroxEngine/Fyrox"
rust-version = "1.86"

[dependencies]
fyrox = { version = "0.36.2", path = "../fyrox" }
fyrox-template-core = { version = "0.36.2", path = "../template-core" }
fyrox-build-tools = { version = "0.36.2", path = "../fyrox-build-tools" }
serde = { version = "1", features = ["derive"] }
ron = "0.8.1"
open = "5.0.1"
cargo_metadata = "0.19.0"
serde_json = "1.0.133"
directories = "5.0.1"