[package]
name = "rg3d-core-derive"
version = "0.11.0"
authors = ["toyboot4e <toyboot4e@gmail.com>, Dmitry Stepanov <d1maxa@yandex.ru>"]
edition = "2018"
license = "MIT"
description = "Proc-macro for Visit trait"
repository = "https://github.com/mrDIMAS/rg3d"
include = ["/src/**/*", "/Cargo.toml", "/README.md"]
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
convert_case = "0.4.0"
proc-macro2 = "1.0.26"
quote = "1.0.9"
syn = "1.0.71"
darling = "0.13.0"

[dev-dependencies]
rg3d-core = { path = "../rg3d-core" }
futures = "0.3.14"
