[package]
name = "rg3d-core-derive"
version = "0.13.0"
authors = ["toyboot4e <toyboot4e@gmail.com>, Dmitry Stepanov <d1maxa@yandex.ru>"]
edition = "2018"
license = "MIT"
description = "Proc-macro for the Visit trait"
repository = "https://github.com/mrDIMAS/rg3d"
include = ["/src/**/*", "/Cargo.toml", "/README.md"]
readme = "README.md"
resolver = "2"

[lib]
proc-macro = true

[dependencies]
convert_case = "0.4.0"
proc-macro2 = "1.0.28"
quote = "1.0.9"
syn = "1.0.74"
darling = "0.13.0"

[dev-dependencies]
rg3d-core = { path = "../rg3d-core" }
rg3d = { path = "../" }
futures = "0.3.16"
